code/css/sb-admin.css
/*!
 * Start Bootstrap - SB Admin Bootstrap Admin Template (http://startbootstrap.com)
 * Code licensed under the Apache License v2.0.
 * For details, see http://www.apache.org/licenses/LICENSE-2.0.
 */

/* Global Styles */

body {
    margin-top:50px;
}


@media(min-width:768px) {
    body {
        margin-top: 50px;
    }
}


.huge {
    font-size: 50px;
    line-height: normal;
}

/* Top Navigation */

.top-nav {
    padding: 0 15px;
}

.top-nav>li {
    display: inline-block;
    float: left;
}

.top-nav>li>a {
    padding-top: 15px;
    padding-bottom: 15px;
    line-height: 20px;
    color: #999;
}

.top-nav>li>a:hover,
.top-nav>li>a:focus,
.top-nav>.open>a,
.top-nav>.open>a:hover,
.top-nav>.open>a:focus {
    color: #fff;
    background-color: #000;
}

.top-nav>.open>.dropdown-menu {
    float: left;
    position: absolute;
    margin-top: 0;
    border: 1px solid rgba(0,0,0,.15);
    border-top-left-radius: 0;
    border-top-right-radius: 0;
    background-color: #fff;
    -webkit-box-shadow: 0 6px 12px rgba(0,0,0,.175);
    box-shadow: 0 6px 12px rgba(0,0,0,.175);
}

.top-nav>.open>.dropdown-menu>li>a {
    white-space: normal;
}

ul.message-dropdown {
    padding: 0;
    max-height: 250px;
    overflow-x: hidden;
    overflow-y: auto;
}

li.message-preview {
    width: 275px;
    border-bottom: 1px solid rgba(0,0,0,.15);
}

li.message-preview>a {
    padding-top: 15px;
    padding-bottom: 15px;
}

li.message-footer {
    margin: 5px 0;
}

ul.alert-dropdown {
    width: 200px;
}


/* notification css */



.glyphicon-bell {

    font-size:1.5rem;
}

.notifications {
    min-width:420px;
}

.notifications-wrapper {
    overflow:auto;
    max-height:250px;
}

.menu-title {
    color:#27918b;
    font-size:15px;
    display:inline-block;
}

.glyphicon-circle-arrow-right {
    margin-left:10px;
}


.notification-heading, .notification-footer  {
    padding:2px 10px;
}


.dropdown-menu.divider {
    margin:5px 0;
}

.item-title {

    font-size:1.3rem;
    color:#000;

}
.notifications a.content {
    margin-left: 0;
    text-decoration:none;
    background:#ccc;

}

.notification-item-green{
    padding:10px;
    margin:5px;
    background:#F0FFFF;
    border-radius:4px;
}
.notification-item-yellow{
    padding:10px;
    margin:5px;
    background:#FFF8DC;
    border-radius:4px;
}
.notification-item-pink{
    padding:10px;
    margin:5px;
    background:#FFE4E1;
    border-radius:4px;
}


    /*----------------------------------------------------------------------------------- */
    /*  List groups */
    /*----------------------------------------------------------------------------------- */
    .list-group .list-group-item.active, .list-group .list-group-item.active:hover, .list-group .list-group-item.active:focus {
        color: white;
        background-color: #32b9b1;
        border-color: #27918b; }
    .list-group .list-group-item.active .badge, .list-group .list-group-item.active:hover .badge, .list-group .list-group-item.active:focus .badge {
        color: #32b9b1;
        background-color: white; }

    a.list-group-item.active, a.list-group-item.active:hover, a.list-group-item.active:focus {
        background-color: #32b9b1;
        border-color: #32b9b1; }

    .info-panel{
        border: solid 2px #1abc9c;
        -webkit-box-shadow: 0 1px 12px rgba(0, 0, 0, 0.175);
        box-shadow: 0 1px 12px rgba(0, 0, 0, 0.175)
    }
    .info-panel> .panel-heading{
        color:#1abc9c;
        text-align: center;
        font-size: 18px;
        border-bottom: solid 2px;
    }
    #issueTable{
        font-family: arial-black;
        border:2px solid #1abc9c;
    }

    .content{
        margin-top:40px;
    }
    .no-gutter [class*="-2"] {
        padding-left: 0;
        padding-right: 0;
    }

    .project-info{
        color:#27918b;
    }
    .customer-info{
        color:#8e44ad;
    }
    .pm-info{
        color:#34495e;
    }
    .ongoing-panel{
        margin-top: 10px;
        border: 2px solid #1abc9c;
        border-radius: 0;
    }


    .ongoing-panel>.panel-heading span {
        font-size: 15px;
    }
    .ongoing-panel >.panel-heading {
        background: #1abc9c;
        color: #FFFFFF;
        height:72px;
        font-size:18px;

    }
    .past-panel{
        margin-top: 10px;
        border: 2px solid #7f8c8d;
        border-radius: 0;
    }


    .past-panel>.panel-heading span {
        font-size: 15px;
    }
    .past-panel >.panel-heading {
        background: #7f8c8d;
        color: #FFFFFF;
        height:72px;
        font-size:18px;

    }
    .clsDatePicker {
        z-index: 100000;
    }

    #tree{
        margin-top:10px;
    }

